--- a/mobile/src/main/res/layout/content_l_weather_b.xml
+++ b/mobile/src/main/res/layout/content_l_weather_b.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
+        android:layout_margin="0.5dp"
         android:contentDescription="@string/app_name"
         android:scaleType="fitStart"
         android:src="@mipmap/n_weather_weizhi"
@@ -69,7 +70,7 @@
         <View
             android:id="@+id/line1"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
+            android:layout_height="0.5dp"
             app:layout_marginTopPercent="4%h" />
 
         <com.zhy.android.percent.support.PercentLinearLayout
